<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameCreatorCL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/gameCreatorRV"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RadioGroup
            android:id="@+id/TeamsRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/TeamsTextView"
            android:layout_alignRight="@+id/PlayerPicker"
            android:layout_below="@+id/TeamsTextView"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            android:paddingTop="12dp">

            <RadioButton
                android:id="@+id/TwoTeamRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="24dp"
                android:text="@string/two"
                android:textColorLink="@color/active" />

            <RadioButton
                android:id="@+id/ThreeTeamRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="24dp"
                android:text="@string/three" />

            <RadioButton
                android:id="@+id/MoreTeamRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="24dp"
                android:text="@string/more" />
        </RadioGroup>

        <TextView
            android:id="@+id/PlayersTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/TeamsTextView"
            android:layout_below="@+id/TeamsRadioGroup"
            android:text="@string/playercount"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <AutoCompleteTextView
            android:id="@+id/SportTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/sport_example"
            android:inputType="textCapWords"
            android:lines="1" />

        <de.pasligh.android.teamme.tools.HoloCircleSeekBar
            android:id="@+id/PlayerPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/PlayersTextView"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/PlayersTextView"
            android:layout_marginTop="16dp"
            app:init_position="4"
            app:max="24"
            app:pointer_color="@color/accent_color"
            app:pointer_size="28"
            app:text_color="@color/active"
            app:text_size="150"
            app:wheel_active_color="@color/active"
            app:wheel_size="10"
            app:wheel_unactive_color="@color/inactive" />

        <TextView
            android:id="@+id/NewGameLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:paddingBottom="16dp"
            android:text="@string/newGameText"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/inactive"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/TeamsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/SportTextView"
            android:layout_marginTop="8dp"
            android:text="@string/teams"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/NewGameLabelTextView"
            android:text="@string/sport"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/newGameFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:src="@drawable/actionbar"
        app:elevation="6dp"
        app:layout_anchor="@id/gameCreatorRV"
        app:layout_anchorGravity="bottom|right|end"
        app:pressedTranslationZ="16dp" />


</android.support.design.widget.CoordinatorLayout>